adjust style for Anki记忆卡

--- a/back.html
+++ b/back.html
@@ -10,13 +10,13 @@
   </div>
   <hr>
 
-  <div>
+  <div class="tips">
     正确选项：<span id="correctAnswer"></span>，你的选项：<span id="yourChoice"></span>
   </div>
 
 </div>
 
-<div class="footer">版本: v1.0, 作者: git9527</div>
+<div class="footer">版本: v1.1，作者: git9527，开源地址：<a href="https://github.com/git9527/anki-single-select">Github</a>，<a href="https://gitee.com/git9527/anki-single-select">Gitee</a></div>
 
 <div id="answer" style="display:none">{{answer}}</div>
 <div id="options" style="display:none">{{options}}</div>
