--- a/styles.html
+++ b/styles.html
@@ -59,6 +59,10 @@
         background-color: #272822;
     }
 
+    .tips {
+        color: white;
+    }
+
     .footer {
         margin: 30px 10px;
         color: white;
@@ -66,10 +70,8 @@
     }
 
 
-    /*定位正确率展示条*/
-    #performance {
-        text-align: center;
-        font-size: 12px;
-        margin-top: 0px;
+    a {
+        color: #0366d6;
+        text-decoration: none;
     }
 </style>
