--- a/front.html
+++ b/front.html
@@ -10,7 +10,7 @@
   </div>
 </div>
 
-<div class="footer">版本: v1.0, 作者: git9527</div>
+<div class="footer">版本: v1.1，作者: git9527，开源地址：<a href="https://github.com/git9527/anki-single-select">Github</a>，<a href="https://gitee.com/git9527/anki-single-select">Gitee</a></div>
 
 <div id="answer" style="display:none">{{answer}}</div>
 <div id="options" style="display:none">{{options}}</div>
