--- a/front.html
+++ b/front.html
@@ -7,6 +7,9 @@
   <div class="body">
     <div class="question">{{id}}. {{cloze:question}}</div>
     <ul class="options" id="optionFront"></ul>
+    <div class="tag">
+      标签: {{Tags}}
+    </div>
   </div>
 </div>
 
