--- a/styles.html
+++ b/styles.html
@@ -69,6 +69,11 @@
         font-weight: normal;
     }
 
+    .tag {
+        color: black;
+        margin-left: 10px;
+        font-weight: bold;
+    }
 
     a {
         color: #0366d6;
