--- a/styles.html
+++ b/styles.html
@@ -69,10 +69,18 @@
         font-weight: normal;
     }
 
-    .tag {
+    .tag-title {
         color: black;
         margin-left: 10px;
         font-weight: bold;
+    }
+
+    .single-tag {
+        color: #d26377;
+        margin-left: 5px;
+        padding: 4px 8px;
+        border-radius: 5px;
+        background-color: #ddd;
     }
 
     a {
