--- a/back.html
+++ b/back.html
@@ -17,7 +17,7 @@
 
 </div>
 
-<div class="footer">版本: v1.2，作者: git9527，开源地址：<a href="https://github.com/git9527/anki-single-select">Github</a>，<a href="https://gitee.com/git9527/anki-single-select">Gitee</a></div>
+<div class="footer">v1.3，作者：git9527，开源地址：<a href="https://github.com/git9527/anki-single-select">Github</a> | <a href="https://gitee.com/git9527/anki-single-select">Gitee</a></div>
 
 <div id="answer" style="display:none">{{answer}}</div>
 <div id="options" style="display:none">{{options}}</div>
