--- a/styles.html
+++ b/styles.html
@@ -64,6 +64,7 @@
     }
 
     .footer {
+        font-size: 14px;
         margin: 30px 10px;
         color: white;
         font-weight: normal;
@@ -76,11 +77,13 @@
     }
 
     .single-tag {
-        color: #d26377;
+        font-size: 14px;
         margin-left: 5px;
         padding: 4px 8px;
         border-radius: 5px;
-        background-color: #ddd;
+        color: #f56c6c;
+        background: #fef0f0;
+        border: 1px solid #fbc4c4;
     }
 
     a {
