--- a/styles.html
+++ b/styles.html
@@ -25,7 +25,7 @@
   .option {
     color: black;
     background-color: #f2f2f4;
-    padding: 10px;
+    padding: 7px 10px;
     margin: 10px;
     line-height: 26px;
     border-radius: 5px;
