--- a/back.html
+++ b/back.html
@@ -6,7 +6,7 @@
 <div class="wrap-container">
   <div class="body">
     <div class="question">{{id}}. {{cloze:question}}</div>
-    <ul class="options" id="optionBack"></ul>
+    <div class="options" id="optionBack"></div>
     <div id="tagBack"></div>
   </div>
   <hr>
