--- a/front.html
+++ b/front.html
@@ -6,7 +6,7 @@
 <div class="wrap-container">
   <div class="body">
     <div class="question">{{id}}. {{cloze:question}}</div>
-    <ul class="options" id="optionFront"></ul>
+    <div class="options" id="optionFront"></div>
     <div id="tagFront"></div>
   </div>
 </div>
