--- a/styles.html
+++ b/styles.html
@@ -1,93 +1,106 @@
 </style>
 <style>
-  .wrap-container {
-    margin: 10px;
-  }
-  .body {
-    background-color: white;
-    border-radius: 10px;
-    padding: 10px;
-  }
-  .question {
-    color: black;
-    font-weight: bold;
-  }
+    .wrap-container {
+        margin: 10px;
+    }
 
-  .options {
-    list-style: none;
-  }
+    .body {
+        background-color: white;
+        border-radius: 10px;
+        padding: 10px;
+    }
 
-  .options * {
-    cursor: pointer;
-  }
+    .question {
+        color: black;
+        font-weight: bold;
+    }
 
-  .option {
-    color: black;
-    background-color: #f2f2f4;
-    padding: 7px 10px;
-    margin: 10px;
-    line-height: 26px;
-    border-radius: 5px;
-    font-weight: normal;
-  }
+    .options {
+        list-style: none;
+    }
 
-  .options input[name="options"] {
-    display: none;
-  }
+    .options * {
+        cursor: pointer;
+    }
 
-  .correct {
-    background-color: #5ec582;
-    color: white
-  }
+    .option {
+        color: black;
+        background-color: #f2f2f4;
+        padding: 7px 10px;
+        margin: 10px;
+        line-height: 26px;
+        border-radius: 5px;
+        font-weight: normal;
+    }
 
-  .wrong {
-    background-color: #e25b76;
-    color: white
-  }
+    .options input[name="options"] {
+        display: none;
+    }
 
-  .selected {
-    background-color: #ffc245;
-    color: white
-  }
+    .correct {
+        background-color: #5ec582;
+        color: white
+    }
 
-  .card {
-    font-family: Arial;
-    font-size: 17px;
-    text-align: left;
-    color: white;
-    background-color: #272822;
-  }
+    .wrong {
+        background-color: #e25b76;
+        color: white
+    }
 
-  .tips {
-    color: white;
-  }
+    .question-type {
+        color: #ef3461;
+    }
 
-  .footer {
-    font-size: 14px;
-    margin: 30px 10px;
-    color: white;
-    font-weight: normal;
-  }
+    .selected {
+        background-color: #ffc245;
+        color: white
+    }
 
-  .tag-title {
-    color: black;
-    margin-left: 10px;
-    font-weight: bold;
-  }
+    .card {
+        font-family: Arial;
+        font-size: 17px;
+        text-align: left;
+        color: white;
+        background-color: #272822;
+    }
 
-  .single-tag {
-    font-size: 14px;
-    margin-left: 5px;
-    padding: 4px 8px;
-    border-radius: 5px;
-    color: #f56c6c;
-    background: #fef0f0;
-    border: 1px solid #fbc4c4;
-    font-weight: normal;
-  }
+    .tips {
+        color: white;
+    }
 
-  a {
-    color: #0366d6;
-    text-decoration: none;
-  }
+    .footer {
+        font-size: 14px;
+        margin: 30px 10px;
+        color: white;
+        font-weight: normal;
+    }
+
+    .tag-title {
+        color: black;
+        margin-left: 10px;
+        font-weight: bold;
+    }
+
+    .single-tag {
+        font-size: 14px;
+        margin-left: 5px;
+        padding: 4px 8px;
+        border-radius: 5px;
+        color: #f56c6c;
+        background: #fef0f0;
+        border: 1px solid #fbc4c4;
+        font-weight: normal;
+    }
+
+    a {
+        color: #0366d6;
+        text-decoration: none;
+    }
+
+    .notes-container {
+        background-color: white;
+        color: black;
+        border-radius: 5px;
+        padding: 10px;
+    }
 </style>
