--- a/back.html
+++ b/back.html
@@ -5,7 +5,7 @@
 
 <div class="wrap-container">
   <div class="body">
-    <div class="question">{{id}}. {{cloze:question}}</div>
+    <div class="question">{{id}}.<span id="questionType" class="question-type"></span>{{cloze:question}}</div>
     <div class="options" id="optionBack"></div>
     <div id="tagBack"></div>
   </div>
@@ -14,36 +14,78 @@
   <div class="tips">
     正确选项：<span id="correctAnswer"></span>，你的选项：<span id="yourChoice"></span>
   </div>
+  <div id="notes-warper">
+    <hr>
+    <div class="notes-container">{{notes}}</div>
+  </div>
 
 </div>
 
-<div class="footer">v1.5，作者：git9527，开源地址：<a href="https://github.com/git9527/anki-single-select">Github</a> | <a href="https://gitee.com/git9527/anki-single-select">Gitee</a></div>
+<div class="footer">v2.0，作者：git9527，开源地址：<a href="https://github.com/git9527/anki-awesome-select">Github</a> | <a href="https://gitee.com/git9527/anki-awesome-select">Gitee</a></div>
 
 <div id="answer" style="display:none">{{answer}}</div>
 <div id="options" style="display:none">{{options}}</div>
 <div id="tags" style="display:none">{{Tags}}</div>
+<div id="notes" style="display:none">{{notes}}</div>
 
 <script>
   function showBackOptions() {
-    var options = document.getElementById("options");
-    var optionList = "";
-    options = options.innerHTML.split("||")
-    for (var s in options) {
-      var prefix = String.fromCharCode(Number.parseInt(s) + 65)
-      var _option = prefix + ". " + options[s]
-      var _class = "option"
-      if (Number.parseInt(s) + 1 == document.getElementById("answer").innerHTML) {
-        _class += " correct"
-      } else if (Persistence.isAvailable() && Persistence.getItem() == prefix) {
-        _class += " wrong"
+    var optionObjs = getOptionObjs()
+    var liList = ''
+    var isMulti = document.getElementById("answer").innerHTML.indexOf('||') > 0
+    for (var i in optionObjs) {
+      var _optionObj = optionObjs[i]
+      var prefix = String.fromCharCode(Number.parseInt(i) + 65)
+      var _option = prefix + ". " + _optionObj.label
+      var _optionKey = _optionObj.key + ''
+      var _isSelected = isSelected(_optionKey)
+      var _isCorrect = isCorrectAnswer(_optionKey)
+      var _class = ''
+      if (isMulti) {
+        if (_isSelected && _isCorrect) {
+          _class = 'option correct'
+        } else if (!_isSelected && !_isCorrect) {
+          _class = 'option'
+        } else {
+          _class = 'option wrong'
+        }
+      } else {
+        if (_isCorrect) {
+          _class = 'option correct'
+        } else {
+          _class = _isSelected ? 'option wrong' : 'option'
+        }
       }
-      optionList += "<li class='" + _class + "'>" + _option + "</li>"
+      liList += "<li class='" + _class + "'>" + _option + "</li>"
     }
-    document.getElementById("optionBack").innerHTML = optionList
+    document.getElementById("optionBack").innerHTML = liList
+  }
+
+  function isCorrectAnswer(optionKey) {
+    return document.getElementById("answer").innerHTML.indexOf(optionKey) > -1
+  }
+
+  function isSelected(optionKey) {
+    if (!Persistence.isAvailable()) {
+      return false
+    }
+    return (Persistence.getItem('ANKI-SELECTED') || '').indexOf(optionKey) > -1
+  }
+
+  function getOptionObjs() {
+    var optionArray = document.getElementById("options").innerHTML.trim().split("||")
+    var optionObjs = []
+    for (var i in optionArray) {
+      optionObjs.push({
+        key: Number.parseInt(i) + 1,
+        label: optionArray[i]
+      })
+    }
+    return optionObjs
   }
 
   function showTags () {
-    var tags = document.getElementById("tags").innerHTML
+    var tags = document.getElementById("tags").innerHTML.trim()
     if (!tags) return
     tags = tags.split(' ')
     var tagList = '<span class="tag-title">标签: </span>'
@@ -55,12 +97,34 @@
     document.getElementById("tagBack").innerHTML = tagList
   }
 
+  function numberToAlpha(numbers) {
+    var alphas = []
+    for (var i in numbers) {
+      var number = numbers[i]
+      alphas.push(String.fromCharCode(Number.parseInt(number) + 64))
+    }
+    return alphas.toString()
+  }
+
+  function showAnswers() {
+    document.getElementById("correctAnswer").innerHTML = numberToAlpha(document.getElementById("answer").innerHTML.trim().split('||'))
+    if (Persistence.isAvailable()) {
+      var selectedNumbers = Persistence.getItem('ANKI-SELECTED').trim().split(',')
+      document.getElementById("yourChoice").innerHTML = numberToAlpha(selectedNumbers)
+      Persistence.setItem('ANKI-SELECTED', '')
+    }
+    document.getElementById('questionType').innerHTML = document.getElementById("answer").innerHTML.indexOf('||') > -1 ? '【多选】' : '【单选】'
+  }
+
+  function showNotes() {
+    if (!document.getElementById('notes').innerText) {
+      document.getElementById('notes-warper').style.display = 'none'
+    }
+  }
+
   showBackOptions()
   showTags()
+  showAnswers()
+  showNotes()
 
-  document.getElementById("correctAnswer").innerHTML = String.fromCharCode(Number.parseInt(document.getElementById("answer").innerHTML) + 64)
-  if (Persistence.isAvailable()) {
-    document.getElementById("yourChoice").innerHTML = Persistence.getItem() != 'optionTrue' ? Persistence.getItem() : document.getElementById("correctAnswer").innerHTML
-    Persistence.setItem('')
-  }
 </script>
